# unifi-cloudflare-glue

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INITIAL_PROMPT.md  OPENSPEC_PROMPT.md  README.md  README.old.md  dagger.json  kcl.mod  kcl_README.md  main.k  pyproject.toml  test_cloudflare.k  test_error_format.k  test_error_validation.k
.github/workflows/: status-check.yml  test.yml
docs/: README.md  architecture.md  backend-configuration.md  dagger-reference.md  deployment-patterns.md  getting-started.md  kcl-guide.md  security.md  state-management.md  terraform-modules.md  troubleshooting.md  validation-errors.md  vals-integration.md
examples/backend-configs/: Makefile.example  README.md  azurerm-backend-1password.yaml.tmpl  azurerm-backend-azure-kv.yaml.tmpl  azurerm-backend.hcl  azurerm-backend.yaml  gcs-backend-gcp-secrets.yaml.tmpl  gcs-backend.hcl  gcs-backend.yaml  remote-backend.hcl  remote-backend.yaml  s3-backend-1password.yaml.tmpl  s3-backend-aws-secrets.yaml.tmpl  s3-backend.hcl  s3-backend.yaml
examples/dev-environment/: README.md  deploy.sh  destroy.sh  kcl.mod
examples/external-only/: README.md  kcl.mod  main.k
examples/homelab-media-stack/: .gitignore  README.md  kcl.mod  main.k
examples/internal-only/: README.md  kcl.mod  main.k
examples/multiple-services/: README.md  kcl.mod  main.k
examples/single-service/: README.md  (+2 more)
generators/: cloudflare.k  unifi.k
kcl/: README.md  json  kcl.mod  main.k  test_validation.k
openspec/: config.yaml  project.md
schemas/: base.k  cloudflare.k  unifi.k
test-output/: cloudflare.json  unifi.json
(+449 files in other folders)
