[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project]
name = "main"
version = "0.12.2"
requires-python = ">=3.11"
dependencies = [
    "dagger-io",
    "pyyaml>=6.0,<7.0",
]

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "generator: marks tests as generator output validation tests",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
